--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "mongodb": "^4.17.2"
+    "express-async-handler": "^1.2.0",
+    "mongodb": "^4.17.2",
+    "nodemon": "^3.1.3"
   }
 }
